Add docker image

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ po/*~
 ################################################################################
 ## Custom gitignore
 ################################################################################
+/inst/run
