Add code to save tracing data and run on programs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    instrumentr
+    instrumentr,
+    fst,
+    purrr
 Remotes:
     PRL-PRG/instrumentr
 Roxygen: list(markdown = TRUE)
