Replace R implementation with C

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ Imports:
     purrr
 Remotes:
     PRL-PRG/instrumentr
+LinkingTo:
+    instrumentr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
