--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,9 @@
 export(trace_strictness)
 export(write_tracing_data)
 importFrom(fst,write_fst)
-importFrom(instrumentr,create_context)
-importFrom(instrumentr,get_argument)
-importFrom(instrumentr,get_arguments)
 importFrom(instrumentr,get_data)
-importFrom(instrumentr,get_expression)
-importFrom(instrumentr,get_id)
-importFrom(instrumentr,get_name)
-importFrom(instrumentr,get_parameters)
-importFrom(instrumentr,get_position)
-importFrom(instrumentr,get_result)
-importFrom(instrumentr,is_evaluated)
-importFrom(instrumentr,is_missing)
-importFrom(instrumentr,is_successful)
-importFrom(instrumentr,is_vararg)
-importFrom(instrumentr,set_data)
 importFrom(instrumentr,trace_code)
+importFrom(instrumentr,trace_packages)
 importFrom(purrr,imap_chr)
 importFrom(utils,installed.packages)
+useDynLib(strictr, .registration = TRUE, .fixes = "C_")
