Add execution stats to tracing state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(trace_strictness)
 export(write_tracing_data)
 importFrom(fst,write_fst)
 importFrom(instrumentr,get_data)
+importFrom(instrumentr,get_exec_stats)
 importFrom(instrumentr,trace_code)
 importFrom(instrumentr,trace_packages)
 importFrom(purrr,imap_chr)
